feat(model): add Model resource CRUD
